--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,30 @@ body {
 	height: 100vh;
 	padding: 0;
 	margin: 0;
-	background-color: #081b33;
+	background: rgb(2, 1, 2);
+	background: linear-gradient(
+		180deg,
+		rgba(2, 1, 2, 1) 0%,
+		rgba(8, 27, 51, 1) 50%,
+		rgba(2, 1, 2, 1) 100%
+	);
 }
 
 svg {
 	position: absolute;
 	pointer-events: none;
+}
+
+.container {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.svg-container {
+	height: 200px;
+	width: 100%;
 }
 
 .options-container {
