--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300,400");
+
 body {
 	height: 100vh;
 	padding: 0;
@@ -9,6 +11,25 @@ body {
 		rgba(8, 27, 51, 1) 50%,
 		rgba(2, 1, 2, 1) 100%
 	);
+
+	font-family: "Roboto Mono", monospace;
+}
+
+.time,
+.name h1,
+.name p {
+	margin: 0.1em;
+	text-transform: uppercase;
+	font-weight: lighter;
+}
+
+.info {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	width: 100%;
+	padding: 0 2em;
+	box-sizing: border-box;
 }
 
 svg {
@@ -21,6 +42,9 @@ svg {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
+
+	color: white;
 }
 
 .svg-container {
@@ -32,25 +56,28 @@ svg {
 	width: 400px;
 }
 
-.btn-group {
-	display: flex;
-	justify-content: space-evenly;
-}
-
-.btn-group .btn:first-child {
-	border-top-left-radius: 3em;
-}
-
-.btn-group .btn:last-child {
-	border-bottom-right-radius: 3em;
-}
-
 .btn {
 	padding: 0.3em 0.5em;
 	outline: none;
-	font-size: 2em;
-	border: none;
+	font-size: 1.5em;
+	border: 1px solid blue;
 	font-weight: lighter;
-	width: 100%;
 	margin: 0.1em 0.05em;
+	background: transparent;
+	color: white;
+	animation: shiny 20s cubic-bezier(0.23, 1, 0.32, 1) infinite alternate;
+}
+
+@keyframes shiny {
+	0% {
+		border-color: #00bcd4;
+	}
+
+	50% {
+		border-color: #e91e63;
+	}
+
+	100% {
+		border-color: #673ab7;
+	}
 }
